--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div align="center">
-    <image src="./SauraviThapa.jpeg" alt="SauraviThapa" width=250 height=250 />
+    <image src="./SauraviThapa.jpeg" alt="SauraviThapa" width=250 height=250 >
 </div>
 <h2 align="center">Sauravi Thapa</h2>
 <div>
@@ -27,7 +27,7 @@
 
 <p>
     <a href="https://validator.w3.org/nu/?doc=https://sauravithp.github.io/wap/">
-        <img src="./htmlchecker.jpeg" alt="Valid CSS!" width=200 height=50 />
+        <img src="./htmlchecker.jpeg" alt="Valid CSS!" width=200 height=50 >
     </a>
 </p>
 </body>
