--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div align="center">
-    <image src="./SauraviThapa.jpeg" alt="SauraviThapa" width=250 height=250 >
+    <img src="./SauraviThapa.jpeg" alt="SauraviThapa" width=250 height=250 >
 </div>
 <h2 align="center">Sauravi Thapa</h2>
 <div>
