--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Sauravi Thapa</title>
+    <link rel="icon" type="image/jpeg" href="./SauraviThapa.jpeg">
+    <link href="public/css/styleme.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div align="center">
@@ -12,8 +14,7 @@
 <div>
     <ul>
         <li>Lab0: This is homepage</li>
-        <li><a href="index.html">Lab1: About me</a></li>
-        <li><a href="index.html">Lab2: About me</a></li>
+        <li><a href="aboutMe.html">Lab1: About me</a></li>
         <li><a href="index.html">Homework1: Grandma's Lemon Meringue pie</a></li>
         <li><a href="index.html">Homework2: Movie review</a></li>
         <li><a href="index.html">Lab3: My Music Page</a></li>
