--- a/aboutMe.html
+++ b/aboutMe.html
@@ -49,11 +49,11 @@
 
 
 <p>
-    <a href="https://validator.w3.org/nu/?doc=https://sauravithp.github.io/wap/">
+    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fsauravithp.github.io%2Fwap%2FaboutMe.html">
         <img src="./htmlchecker.jpeg" alt="Valid HTML!" width=200 height=50 >
     </a>
 
-    <a href="https://validator.w3.org/nu/?doc=https://sauravithp.github.io/wap/">
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fsauravithp.github.io%2Fwap%2FaboutMe.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
         <img src="./htmlCss.jpeg" alt="Valid CSS!" width=200 height=50 >
     </a>
 </p>
