--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,16 +19,17 @@
         <li> CS472 - Web Application Programming</li>
         <li> CS544 - Enterprise Application</li>
         <li> CS435 - Algorithm</li>Ï
-    </ul></div>
+    </ul>
+</div>
 
 
 <div id="movies">
     <h3> My favorite movies</h3>
     <p>(I actually binge more on series than movies.So, I have a very short list) </p>
     <ul>
-        <li> 12 years a slave (<a href="https://www.imdb.com/title/tt2024544/?ref_=fn_al_tt_1" alt="IMDB">IMDB</a>)</li>
-        <li> Orphan(<a href="https://www.imdb.com/title/tt1148204/?ref_=fn_al_tt_1" alt="IMDB">IMDB</a>)</li>
-        <li> The Perks of Being a Wallflower(<a href="https://www.imdb.com/title/tt1659337/?ref_=nv_sr_srsg_0" alt="IMDB">IMDB</a>)</li>
+        <li> 12 years a slave (<a href="https://www.imdb.com/title/tt2024544/?ref_=fn_al_tt_1" >IMDB</a>)</li>
+        <li> Orphan(<a href="https://www.imdb.com/title/tt1148204/?ref_=fn_al_tt_1" >IMDB</a>)</li>
+        <li> The Perks of Being a Wallflower(<a href="https://www.imdb.com/title/tt1659337/?ref_=nv_sr_srsg_0" >IMDB</a>)</li>
     </ul>
 </div>
 
@@ -42,8 +43,8 @@
 <div class="neighbours">
     <h3>Fun Facts about my neighbours</h3>
     <ul>
-        <li>Bijay Shrestha: He is a great writer and has his own <a href="https://bijays.com.np/musicpervs/" alt="BLOG">BLOG</a></li>
-        <li>Shree Krishna Poudel: He is a great <a href="https://github.com/shreekrishna905" alt="CODER">CODER</a> and a very helpful person</li>
+        <li>Bijay Shrestha: He is a great writer and has his own <a href="https://bijays.com.np/musicpervs/" >BLOG</a></li>
+        <li>Shree Krishna Poudel: He is a great <a href="https://github.com/shreekrishna905" >CODER</a> and a very helpful person</li>
     </ul>
 </div>
 
