--- a/aboutMe.html
+++ b/aboutMe.html
@@ -36,8 +36,8 @@
 
 <div>
     <h3>My Moods</h3>
-    Happy:  <img src="public/image/happy.jpeg" width=350 height=350>
-    Hangry: <img src="public/image/hangry.jpeg" width=350 height=350>
+    Happy:  <img src="public/image/happy.jpeg" alt="happy" width=350 height=350>
+    Hangry: <img src="public/image/hangry.jpeg" alt="hangry" width=350 height=350>
 </div>
 
 <div class="neighbours">
