--- a/aboutMe.html
+++ b/aboutMe.html
@@ -18,7 +18,7 @@
         <li> CS590 - Software Architecture</li>
         <li> CS472 - Web Application Programming</li>
         <li> CS544 - Enterprise Application</li>
-        <li> CS435 - Algorithm</li>Ï
+        <li> CS435 - Algorithm</li>
     </ul>
 </div>
 
