--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>About me</title>
     <link href="SauraviThapa.jpeg" type="image/jpeg" rel="icon">
-    <link href="public/css/styleme.css" type="text/css" rel="stylesheet">
+    <link href="public/css/styleme.css" type="text/css"  rel="stylesheet">
 </head>
 <body>
 
@@ -28,6 +28,32 @@
     <p>(I actually binge more on series than movies.So, I have a very short list) </p>
     <ul>
         <li> 12 years a slave (<a href="https://www.imdb.com/title/tt2024544/?ref_=fn_al_tt_1" >IMDB</a>)</li>
+        <ul id="moviesdetails">
+            <li>
+                Director
+                <ul>
+                    <li> Steve McQueen </li></ul>
+            </li>
+
+            <li>
+                Writers
+                <ul>
+                    <li> John Ridley, Solomon Northup </li></ul>
+            </li>
+
+            <li>
+                Genre
+                <ul>
+                    <li> Biography, Drama, History </li></ul>
+            </li>
+
+            <li>
+                Plot
+                <ul>
+                    <li> In the antebellum United States, Solomon Northup, a free black man from upstate New York,
+                        is abducted and sold into slavery. </li></ul>
+            </li>
+        </ul>
         <li> Orphan(<a href="https://www.imdb.com/title/tt1148204/?ref_=fn_al_tt_1" >IMDB</a>)</li>
         <li> The Perks of Being a Wallflower(<a href="https://www.imdb.com/title/tt1659337/?ref_=nv_sr_srsg_0" >IMDB</a>)</li>
     </ul>
