--- a/test.html
+++ b/test.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>About me</title>
-    <link href="SauraviThapa.jpeg" type="image/jpeg" rel="icon">
+    <link href="public/image/SauraviThapa.jpeg" type="image/jpeg" rel="icon">
     <link href="public/css/test.css" type="text/css"  rel="stylesheet">
 </head>
 <body>
 
 <div id="ad">
-    <p>Shop at <strong>Hardwick's Hardware</strong></p> <ul>
+    <p>Shop at <strong>Hardwick's Hardware</strong></p>
+    <ul>
     <li class="line">
         <em>The </em>
         <strong>best</strong>
         prices!
-    </li> <li>
+    </li>
+    <li>
     <em>
         <strong>Act while supplies last!</strong>
     </em> </li>
