--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Sauravi Thapa</title>
-    <link rel="icon" type="image/jpeg" href="./SauraviThapa.jpeg">
+    <link rel="icon" type="image/jpeg" href="public/image/SauraviThapa.jpeg">
     <link href="public/css/styleme.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div align="center">
-    <img src="./SauraviThapa.jpeg" alt="SauraviThapa" width=250 height=250 >
+    <img src="public/image/SauraviThapa.jpeg" alt="SauraviThapa" width=250 height=250 >
 </div>
 <h2 align="center">Sauravi Thapa</h2>
 <div>
     <ul>
         <li>Lab0: This is homepage</li>
         <li><a href="aboutMe.html">Lab1: About me</a></li>
+        <li><a href="csszen.html">CSS Zen Garden</a></li>
         <li><a href="index.html">Homework1: Grandma's Lemon Meringue pie</a></li>
         <li><a href="index.html">Homework2: Movie review</a></li>
         <li><a href="index.html">Lab3: My Music Page</a></li>
@@ -28,7 +29,7 @@
 
 <p>
     <a href="https://validator.w3.org/nu/?doc=https://sauravithp.github.io/wap/">
-        <img src="./htmlchecker.jpeg" alt="Valid CSS!" width=200 height=50 >
+        <img src="public/image/htmlchecker.jpeg" alt="Valid CSS!" width=200 height=50 >
     </a>
 </p>
 </body>
