html added for lab4

--- a/test.html
+++ b/test.html
@@ -2,25 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About me</title>
-    <link href="public/image/SauraviThapa.jpeg" type="image/jpeg" rel="icon">
+    <title>Test</title>
     <link href="public/css/test.css" type="text/css"  rel="stylesheet">
 </head>
 <body>
 
-<div id="ad">
-    <p>Shop at <strong>Hardwick's Hardware</strong></p>
-    <ul>
-    <li class="line">
-        <em>The </em>
-        <strong>best</strong>
-        prices!
-    </li>
-    <li>
-    <em>
-        <strong>Act while supplies last!</strong>
-    </em> </li>
-</ul>
+<!--<h1>Hello world</h1>-->
+
+<!--<div id="ad">-->
+<!--    <p>Shop at <strong>Hardwick's Hardware</strong></p>-->
+<!--    <ul>-->
+<!--    <li class="line">-->
+<!--        <em>The </em>-->
+<!--        <strong>best</strong>-->
+<!--        prices!-->
+<!--    </li>-->
+<!--    <li>-->
+<!--    <em>-->
+<!--        <strong>Act while supplies last!</strong>-->
+<!--    </em> </li>-->
+<!--</ul>-->
+<!--</div>-->
+
+<div id="test">
+
+    <div class="item">A</div>
+    <div class="item">B</div>
+    <div class="item">C
+    <div> Not Direct Child</div>
+    </div>
+    <div class="item">D</div>
+    <div class="item">E</div>
+    <div class="item">F</div>
+    <div class="item">G</div>
+    <div class="item">H</div>
+    <div class="item">I</div>
+    <div class="item">J</div>
+    <div class="item">K<div
 </div>
 
 </body>
