html added for lab4

--- a/form.html
+++ b/form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Form</title>
+    <link href="public/css/form.css" type="text/css"  rel="stylesheet">
 </head>
 <body>
 <header>Workshop Registration</header>
