complete left button

--- a/form.html
+++ b/form.html
@@ -20,8 +20,8 @@
                 <input id="lastName" class="input-class" type="text" name="lastName"  maxlength="100" placeholder="lastName">
                 <br/>
 
-                <label>Institution <span>*</span> </label>
-                <input id="institution" class="input-class" type="text" name="institution"  maxlength="100" placeholder="institution">
+                <label id="institution">Institution <span>*</span> </label>
+                <input class="input-class" type="text" name="institution"  maxlength="100" placeholder="institution">
                 <br/>
 
                 <label>Address <span>*</span> </label>
