--- a/form.html
+++ b/form.html
@@ -6,7 +6,16 @@
     <link href="public/css/form.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<header><h2>Workshop Registration</h2></header>
+<header>
+    <h2>Workshop Registration
+        <span>
+                <select id="more-action" name="more-action">
+                    <option>More Action</option>
+                    <option>Back</option>
+                </select>
+    </span>
+    </h2>
+</header>
 
 <section>
     <p id="register">Register now while seats are available!</p>
@@ -14,22 +23,25 @@
         <div id="form">
             <div>
                 <label>First Name <span>*</span> </label>
-                <input id="firstName" class="input-class" type="text" name="firstName"   maxlength="100" placeholder="firstName">
+                <input id="firstName" class="input-class" type="text" name="firstName" maxlength="100"
+                       placeholder="firstName">
                 <br/>
                 <label>Last Name <span>*</span> </label>
-                <input id="lastName" class="input-class" type="text" name="lastName"  maxlength="100" placeholder="lastName">
+                <input id="lastName" class="input-class" type="text" name="lastName" maxlength="100"
+                       placeholder="lastName">
                 <br/>
 
                 <label id="institution">Institution <span>*</span> </label>
-                <input class="input-class" type="text" name="institution"  maxlength="100" placeholder="institution">
+                <input class="input-class" type="text" name="institution" maxlength="100" placeholder="institution">
                 <br/>
 
                 <label>Address <span>*</span> </label>
-                <input id="address" class="input-class" type="text" name="address"  maxlength="100" placeholder="address">
+                <input id="address" class="input-class" type="text" name="address" maxlength="100"
+                       placeholder="address">
                 <br/>
 
                 <label>City <span>*</span> </label>
-                <input id="city" class="input-class" type="text" name="city"  maxlength="100" placeholder="city">
+                <input id="city" class="input-class" type="text" name="city" maxlength="100" placeholder="city">
                 <br/>
 
                 <label>State/Province/Region</label>
@@ -51,12 +63,14 @@
                 <br/>
 
                 <label>Phone<span>*</span> </label>
-                <input id="phone" class="input-class" type="text" name="phone" size="20" maxlength="100" placeholder="phone">
+                <input id="phone" class="input-class" type="text" name="phone" size="20" maxlength="100"
+                       placeholder="phone">
 
                 <br/>
 
                 <label>Email<span>*</span> </label>
-                <input id="email" class="input-class" type="text" name="email" size="20" maxlength="100" placeholder="email">
+                <input id="email" class="input-class" type="text" name="email" size="20" maxlength="100"
+                       placeholder="email">
                 <br/>
 
             </div>
@@ -89,17 +103,20 @@
 
                 <br/>
                 <label>DD/ChequeNo</label>
-                <input id="chequeNo" class="input-class" type="text" name="chequeNo" size="20" maxlength="100" placeholder="chequeNo">
+                <input id="chequeNo" class="input-class" type="text" name="chequeNo" size="20" maxlength="100"
+                       placeholder="chequeNo">
                 <br/>
                 <br/>
 
                 <label>Drawn On(Bank Name)</label>
-                <input id="bankName" type="text" class="input-class" name="bankName" size="20" maxlength="100" placeholder="bankName">
+                <input id="bankName" type="text" class="input-class" name="bankName" size="20" maxlength="100"
+                       placeholder="bankName">
                 <br/>
                 <br/>
 
                 <label>Payable at </label>
-                <input id="payable" class="input-class" type="text" name="payable" size="500" maxlength="100" placeholder="payable">
+                <input id="payable" class="input-class" type="text" name="payable" size="500" maxlength="100"
+                       placeholder="payable">
                 <br/>
                 <br/>
             </div>
