--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Test</title>
     <link href="public/css/test.css" type="text/css"  rel="stylesheet">
+    <script src="js/test.js"></script>
 </head>
 <body>
 
@@ -24,22 +25,19 @@
 <!--</ul>-->
 <!--</div>-->
 
-<div id="test">
-
-    <div class="item">A</div>
-    <div class="item">B</div>
-    <div class="item">C
-    <div> Not Direct Child</div>
-    </div>
-    <div class="item">D</div>
-    <div class="item">E</div>
-    <div class="item">F</div>
-    <div class="item">G</div>
-    <div class="item">H</div>
-    <div class="item">I</div>
-    <div class="item">J</div>
-    <div class="item">K<div
+<div class="grid-container">
+    <div class="grid-item">1</div>
+    <div class="grid-item">2</div>
+    <div class="grid-item">3</div>
+    <div class="grid-item">4</div>
+    <div class="grid-item">5</div>
+    <div class="grid-item">6</div>
+    <div class="grid-item">7</div>
+    <div class="grid-item">8</div>
+    <div class="grid-item">9</div>
 </div>
+
+<input type = "button" onclick = "area()" value = "Display">
 
 </body>
 </html>
