--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="aboutMe.html">Lab1: About me</a></li>
         <li><a href="csszen.html">CSS Zen Garden</a></li>
         <li><a href="form.html">Form</a></li>
+        <li><a href="lab5.html">Javascript</a></li>
         <li><a href="index.html">Homework1: Grandma's Lemon Meringue pie</a></li>
         <li><a href="index.html">Homework2: Movie review</a></li>
         <li><a href="index.html">Lab3: My Music Page</a></li>
