complete lab 6 and 7

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <li><a href="csszen.html">CSS Zen Garden</a></li>
         <li><a href="form.html">Form</a></li>
         <li><a href="lab5.html">Javascript</a></li>
+        <li><a href="lab6.html">Lab 6</a></li>
+        <li><a href="lab7.html">Lab 7</a></li>
         <li><a href="index.html">Homework1: Grandma's Lemon Meringue pie</a></li>
         <li><a href="index.html">Homework2: Movie review</a></li>
         <li><a href="index.html">Lab3: My Music Page</a></li>
