--- a/test.html
+++ b/test.html
@@ -3,40 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <link href="public/css/test.css" type="text/css"  rel="stylesheet">
     <script src="js/test.js"></script>
+    <link rel="stylesheet" type="text/css" href="./public/css/test.css">
+
 </head>
 <body>
-
-<!--<h1>Hello world</h1>-->
-
-<!--<div id="ad">-->
-<!--    <p>Shop at <strong>Hardwick's Hardware</strong></p>-->
-<!--    <ul>-->
-<!--    <li class="line">-->
-<!--        <em>The </em>-->
-<!--        <strong>best</strong>-->
-<!--        prices!-->
-<!--    </li>-->
-<!--    <li>-->
-<!--    <em>-->
-<!--        <strong>Act while supplies last!</strong>-->
-<!--    </em> </li>-->
-<!--</ul>-->
-<!--</div>-->
-
-<!--<div class="grid-container">-->
-<!--    <div class="grid-item">1</div>-->
-<!--    <div class="grid-item">2</div>-->
-<!--    <div class="grid-item">3</div>-->
-<!--    <div class="grid-item">4</div>-->
-<!--    <div class="grid-item">5</div>-->
-<!--    <div class="grid-item">6</div>-->
-<!--    <div class="grid-item">7</div>-->
-<!--    <div class="grid-item">8</div>-->
-<!--    <div class="grid-item">9</div>-->
-<!--</div>-->
-
-
+<div id=”a”>A
+    <div class=”floaty” id=”b”>C</div>
+    <div id=”c”>D
+        <div id=”d”>E</div>
+    </div>
+</div>
 </body>
 </html>
